force-app/main/default/objects/AccountDetail__c/AccountDetail__c.object-meta.xml
<CustomObject>
    <label>AccountDetail</label>
    <nameField>
        <label>AccountDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>