force-app/main/default/objects/AccountDetail__c/fields/ceoName__c.field-meta.xml
<CustomField>
    <fullName>ceoName__c</fullName>
    <label>ceoName</label>
    <length>234</length>
    <type>Text</type>
</CustomField>