force-app/main/default/objects/AccountDetail__c/fields/LastYearRevenue__c.field-meta.xml
<CustomField>
    <fullName>LastYearRevenue__c</fullName>
    <label>LastYearRevenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>